# indy_vision_task_sim

./: .gitmodules  README .md  README.md  Screencast from 12-15-2021 05:45:08 PM.webm  Screencast from 12-20-2021 01:43:47 AM.webm
darknet_ros/: CMakeLists.txt  package.xml
docker_ros2_foxy_vnc/: Dockerfile  ros-foxy-desktop.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
python_code/indy7_pybullet/: indy7_base.urdf  indy7_fixed_cam_test.py  indy_primitives.py  test_indy_pick.py
python_code/voice_test/: voice_helper.py
src/: workspace.code-workspace
src/darknet_ros/: README.md.
src/indy7_ign-main/: CMakeLists.txt  README.md
src/indy7_ign-main/indy7/: model.sdf
src/indy7_ign-main/indy7whand/: model.sdf
src/indy7_ign-main/urdf/: indy7.urdf
src/indy7_ign_moveit2-main/: CMakeLists.txt  README.md
src/indy7_ign_moveit2-main/launch/: ign_moveit2.launch.py
src/indy7_ign_moveit2-main/moveit2_py/: moveit2.py
src/indy7_moveit2_config-main/: CMakeLists.txt
src/indy7_pybullet/: indy7_sim_table_objs.py
src/indy_vision_rqt_plugin/: CMakeLists.txt  package.xml  plugin.xml
src_ros2/ros2_sim_indy_pybullet/: package.xml  setup.cfg  setup.py
src_ros2/ros2_voice_recognition/: package.xml  setup.cfg  setup.py
src_ros2/ros2_voice_recognition/resource/: ros2_voice_recognition.ui
src_ros2/ros2_voice_recognition/ros2_voice_recognition/: ros2_voice_recognition.py
src_ros2/ros2_yolo/: package.xml  setup.cfg  setup.py
src_ros2/yolo_interfaces/: CMakeLists.txt  package.xml
(+160 files in other folders)
