<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_voice_recognition</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhaoruinan@hanyang.ac.kr">Ruinan Zhao</maintainer>
  <license>Apache license 2.0</license>

  <depend>rclpy</depend>
  <depend>PyQt5</depend>
  <depend>sys</depend>
  <depend>threading</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
